# race-engineer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  race-engineer-prd.md
app/: streamlit_app.py
app/pages/: coaching.py  scouting.py
core/benchmark/: iracing_api.py
core/coaching/: analyzer.py  scouting.py  synthesizer.py
core/coaching/prompts/: coaching.py  scouting.py
core/telemetry/: corner_detector.py  ibt_parser.py  lap_comparator.py  normalizer.py
core/track/: corner_registry.py  crew_chief_seeder.py  models.py  track_db.py
tests/: conftest.py  test_analyzer.py  test_corner_detection_tuning.py  test_corner_detector.py  test_crew_chief_seeder.py  test_ibt_parser.py  test_iracing_api.py  test_lap_comparator.py  test_multilap_comparator.py  test_normalizer.py  test_synthesizer.py  test_track_db.py
